# chainVerse-onchain

./: .env.testnet.example  .gitignore  AFFECTED_SOURCE_FILES.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  ISSUE_349_SUMMARY.md  PR_DESCRIPTION.md  README.md  SECURITY.md  SECURITY_AUDIT_DOCUMENTATION.md  doc.md  hello_chainverse.rs  hello_chainverse_README.md  issue62.json  issue63.json  issue64.json  issue65.json
contracts/: .gitignore  Cargo.toml  Makefile  README.md  complimenter.rs
contracts/.cargo/: config.toml
contracts/certificates/: Cargo.toml
contracts/certificates/src/: contract.rs  errors.rs  events.rs  lib.rs  mint.rs  pause.rs  soulbound_test.rs  storage.rs  test.rs  types.rs  verify.rs
contracts/certificates/test_snapshots/: test_only_admin_can_pause.1.json  test_pause_blocks_mint.1.json  test_structurally_invalid_proof_rejected_without_side_effects.1.json  test_tampered_proof_rejected_without_side_effects.1.json
contracts/certificates/test_snapshots/test/: duplicate_mint_fails.1.json  test_transfer_fails.1.json
contracts/certificates/tests/: access-control.rs  init_tests.rs  pause_tests.rs  security_tests.rs
contracts/chainverse-core/: Cargo.toml
contracts/chainverse-core/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/chainverse-core/src/admin/: mod.rs
contracts/chainverse-core/src/analytics/: mod.rs
contracts/chainverse-core/src/escrow/: mod.rs  (+5 more)
contracts/chainverse-core/test_snapshots/: test_double_initialize_rejected.1.json  test_query_before_init_rejected.1.json
contracts/chainverse-core/tests/: fraud_prevention_tests.rs  governance_dao_tests.rs  security_tests.rs
contracts/chv_token/: Cargo.toml  admin.rs  error.rs  libs.rs  storage.rs
contracts/chv_token/src/: error.rs  extended_test.rs  lib.rs  test.rs
contracts/common/: Cargo.toml  storage.rs
contracts/course_registry/: Cargo.toml
contracts/course_registry/src/: lib.rs  tests.rs
contracts/docs/: architecture.md  contracts.md  escrow_lifecycle.md  events.md  setup.md
contracts/escrow/: royalty.rs  staking.rs  subscription.rs  test.rs
contracts/escrow-vault/: Cargo.toml
contracts/escrow-vault/src/: lib.rs  tests.rs
contracts/escrow/src/: create.rs  errors.rs  events.rs  lib.rs  refund.rs  refund_test.rs  release.rs  state_machine_test.rs  storage.rs  transfer_fix.rs  types.rs  version.rs
contracts/escrow/tests/: create_test.rs  poseidon.rs  security_tests.rs  test_full_flow.rs
contracts/payout-automation/: Cargo.toml
contracts/payout-automation/src/: lib.rs  payment_test.rs  tests.rs
contracts/reward/: Cargo.toml  README.md
contracts/reward/src/: admin.rs  crypto.rs  errors.rs  events.rs  lib.rs  reward.rs  signature.rs  storage.rs  test.rs  tests.rs
contracts/shared/src/: error.rs  events.rs  lib.rs  storage.rs  types.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs  subscription_extended_test.rs  subscription_payment_test.rs  subscription_test.rs  tests.rs
contracts/token/src/: lib.rs  royalty.rs  test.rs
(+125 files in other folders)
