[workspace]
resolver = "2"

members = [
    "certificates",
    "chainverse-core",
    "common",
    "course_registry",
    "escrow",
    "escrow-vault",
    "payout-automation",
    "shared",
    "chv_token"
]

[workspace.dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }
