[workspace]
resolver = "2"

members = [
    "certificates",
    "chainverse-core",
    "common",
    "course_registry",
    "escrow",
    "escrow-vault",
    "payout-automation",
    "shared",
    "chv_token"
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
