[workspace]
resolver = "2"

members = [
    "certificates",
    "chainverse-core",
    "escrow",
    "escrow-vault",
    "payout-automation",
    "reward",
    "course_registry",
    "chv_token",
    "shared",
    "common",
    "staking",
    "token",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
lto = true
codegen-units = 1
panic = "abort"
