[package]
name = "chainverse-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[test]]
name = "security_tests"
required-features = ["testutils"]

[[test]]
name = "governance_dao_tests"
required-features = ["testutils"]

[[test]]
name = "fraud_prevention_tests"
required-features = ["testutils"]